--- a/include/views/default/cockpit2/frontend/tickets/tickets-side-list.phtml
+++ b/include/views/default/cockpit2/frontend/tickets/tickets-side-list.phtml
@@ -17,7 +17,7 @@
 
 		<div ng-if="!account.user.permissions.GLOBAL">
 			<br>
-			<p>We will soon have a chat feature that goes to support here. Until then, text us at: <br><br><a href="tel:16467831444">(646) 783-1444</a></p>
+			<p>We will soon have a chat feature that goes to support here. Until then, text us at: <br><br><a href="tel:16467831444" target="_system">(646) 783-1444</a></p>
 		</div>
 	</div>
 </div>
