Ability to Duplicate a Restaurant #3446

--- a/include/views/default/cockpit/restaurants/restaurant.phtml
+++ b/include/views/default/cockpit/restaurants/restaurant.phtml
@@ -62,6 +62,15 @@
 				</li>
 			<?php } ?>
 
+			<?php if (c::admin()->permission()->check(['global', 'restaurants-all', "restaurant-{$this->restaurant->id_restaurant}-all" ])) { ?>
+				<li class="action-nav-button">
+					<a class="tip" data-original-title="Duplicate" href="javascript:if(confirm('Confirm duplicate this restaurant?')){ document.location.href='/restaurants/<?php echo $this->restaurant->id_restaurant?>/duplicate'; }" title="">
+						<i class="icon-copy"></i>
+					</a>
+					<span>Duplicate</span>
+				</li>
+			<?php } ?>
+
 			<li class="action-nav-button">
 				<a class="tip" data-original-title="Revert" href="javascript:;" id="revert-button" title="">
 					<i class="icon-undo"></i>
