--- a/include/views/default/cockpit2/frontend/drivers/drivers-docs-form.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-docs-form.phtml
@@ -7,7 +7,7 @@
 	</div>
 
 	<div class="dialog-message dialog-message-error" style="font-size: 1.3em; letter-spacing: 0px;">
-			Please upload documents using a desktop computer!
+			Please upload your docs by visiting <span class="link">www.cockpit.la</span> from a desktop computer!
 	</div>
 
 	<h1 class="title left"  style="font-size: 2.7em; margin-bottom: .2em;"><i class="fa fa-briefcase" style="vertical-align: baseline;"></i><span>Documents</span></h1>
