--- a/include/views/default/cockpit2/frontend/drivers/drivers-onboarding-form.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-onboarding-form.phtml
@@ -44,11 +44,9 @@
 
 			<li class="li-input" ng-class="{'error':form.driverPhone.$invalid}">
 				<div class="label">Phone:</div>
-				<div class="input"><input type="text" name="driverPhone" ng-model="driver.phone" required phone-validate placeholder="Phone" is-unique="phone"></div>
+				<div class="input"><input type="text" name="driverPhone" ng-model="driver.phone" required placeholder="Phone"></div>
 				<div class="box-error">
 					<small ng-show="form.driverPhone.$error.required">Required.</small>
-					<small ng-show="form.driverPhone.$error.phoneValidate">Enter a valid phone.</small>
-					<small ng-show="form.driverPhone.$error.isUnique">This phone is already registred!</small>
 				</div>
 			</li>
 
