--- a/include/views/default/cockpit2/frontend/staff/staff-payinfo.phtml
+++ b/include/views/default/cockpit2/frontend/staff/staff-payinfo.phtml
@@ -67,6 +67,17 @@
 					</div>
 				</li>
 
+				<li class="li-input" ng-class="{'error':form.payInfoUsingPex.$invalid}">
+					<div class="label">Using Pex</div>
+					<div class="input">
+						<select ng-model="payInfo.using_pex" required name="payInfoUsingPex" ng-options="type.value as type.label for type in payment._using_pex"></select>
+					</div>
+					<div class="box-error">
+						<small ng-show="form.payInfoUsingPex.$error.required">Required.</small>
+					</div>
+				</li>
+
+
 				<li class="li-input" ng-class="{'error':form.payInfoSummaryEmail.$invalid}">
 					<div class="label">Summary Email:</div>
 					<div class="input"><input type="email" name="payInfoSummaryEmail" ng-model="payInfo.summary_email" placeholder="Email"></div>
