--- a/include/views/default/cockpit2/frontend/drivers/drivers-docs-form.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-docs-form.phtml
@@ -3,11 +3,11 @@
 <div class="content-padding" ng-show="ready">
 
 	<div class="dialog-message dialog-message-error" style="font-size: 1.4em;">
-			<b>In order to get paid</b></br> <span style="font-size: .8em; letter-spacing: 0px;">you must fill out and submit all documents!</span>
+			<b>In order to get paid</b></br> <span style="font-size: .8em; letter-spacing: 0px;">you must upload everything, especially Payment Information!</span>
 	</div>
 
 	<div class="dialog-message dialog-message-error" style="font-size: 1.3em; letter-spacing: 0px;">
-			Please upload your docs by visiting <span class="link">www.cockpit.la</span> from a desktop computer!
+			Please upload your docs by visiting <span class="link">http://cockpit.la</span> from a desktop computer using Chrome as your browser!
 	</div>
 
 	<h1 class="title left"  style="font-size: 2.7em; margin-bottom: .2em;"><i class="fa fa-briefcase" style="vertical-align: baseline;"></i><span>Documents</span></h1>
@@ -42,11 +42,11 @@
 			<!-- Payment info -->
 			<tr>
 				<td class="td-medium driver-docs-name">
-					<h2 class="driver-docs-name"><b>Payment information</b></h2>
+					<h2 class="driver-docs-name"><b>Payment information</b> - don't forget this!</h2>
 				</td>
 				<td align="right">
 					<div>
-						<button ng-click="pay_info()" class="ladda-button upload" data-color="mint" data-style="zoom-in" data-size="l"><span class="ladda-label"><b>Enter this information to get paid!</b></span></button>
+						<button ng-click="pay_info()" class="ladda-button upload" data-color="mint" data-style="zoom-in" data-size="l"><span class="ladda-label"><b>Click here and then click Save</b></span></button>
 					</div>
 				</td>
 			</tr>
