--- a/include/views/default/cockpit2/frontend/drivers/drivers-payment.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-payment.phtml
@@ -44,11 +44,11 @@
 					</tr>
 
 					<tr ng-if="result.payment_date">
-						<td><strong>{{result.title}} Sent Date</strong></td>
+						<td><strong>{{result.title}} Transfer Initiated</strong></td>
 						<td>{{result.payment_date}}</td>
 					</tr>
 					<tr ng-if="result.expected_date">
-						<td><strong>{{result.title}} Expected Date</strong></td>
+						<td><strong>{{result.title}} Estimated Date In Your Account</strong></td>
 						<td>{{result.expected_date}}</td>
 					</tr>
 					<tr>
