--- a/include/views/default/cockpit2/frontend/drivers/drivers-payments.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-payments.phtml
@@ -51,7 +51,13 @@
 				</thead>
 				<tbody>
 					<tr ng-repeat="payment in result.payments" ng-show="!filter || filter == payment.type">
-						<td><span class="link" ng-click="show_payment( payment.id_payment_schedule );">{{payment.type}}</span></td>
+						<td>
+							<span class="link" ng-click="show_payment( payment.id_payment_schedule );">{{payment.type}}</span>
+							<span ng-if="payment.total_cash_orders" class="note">
+								<br>
+								Already received in cash: ${{payment.total_received_cash | formatPrice}} + Cash Tips ({{payment.total_cash_orders}} orders)
+							</span>
+						</td>
 						<td>{{payment.range_date}}</td>
 						<td positive-or-negative-color="{{payment.amount}}">
 							${{payment.amount | formatPrice}}
