--- a/include/views/default/cockpit2/frontend/general/general-home.phtml
+++ b/include/views/default/cockpit2/frontend/general/general-home.phtml
@@ -1,6 +1,6 @@
 <div class="main-content-readable home-greeting">
 	<div class="home-welcome">
-		<h1>Finding you the best food...</h1>
+		<h1>Are you lost?</h1>
 		
 	</div>
 </div>
