--- a/include/views/default/cockpit2/frontend/general/general-login.phtml
+++ b/include/views/default/cockpit2/frontend/general/general-login.phtml
@@ -29,7 +29,7 @@
 				<span class="field"><input type="password" name="password" ng-model="password" autocorrect="off" autocapitalize="off"></span>
 			</div>
 			
-			<div class="button-pushable find-restaurants button-login">
+			<div class="find-restaurants button-login">
 				<button class="button orange">
 					Sign In
 				</button>
@@ -37,7 +37,23 @@
 		</form>
 		
 		<div class="info">
-			Cockpit is Crunchbutton's tool of awesomeness. Looking for delivery food? Head over to <a href="http://crunchbutton.com/app" target="_system">crunchbutton.com</a>
+			<a href="/onboarding">
+				<div class="login-option">
+					<div class="circle"><i class="fa fa-user"></i></div>
+					<br>
+					New User
+				</div>
+			</a>
+			
+			
+			<a href="/legal">
+				<div class="login-option">
+					<div class="circle"><i class="fa fa-info"></i></div>
+					<br>
+					Terms of Use
+				</div>
+			</a>
+
 		</div>
 	</div>
 </div>
