fixed some nav issues

--- a/include/views/default/cockpit2/frontend/general/general-login.phtml
+++ b/include/views/default/cockpit2/frontend/general/general-login.phtml
@@ -37,17 +37,17 @@
 		</form>
 		
 		<div class="info">
+
 			<a href="/onboarding">
-				<div class="login-option">
+				<div class="login-option login-option-user">
 					<div class="circle"><i class="fa fa-user"></i></div>
 					<br>
 					New User
 				</div>
 			</a>
-			
-			
+
 			<a href="/legal">
-				<div class="login-option">
+				<div class="login-option login-option-terms">
 					<div class="circle"><i class="fa fa-info"></i></div>
 					<br>
 					Terms of Use
