--- a/include/views/default/cockpit2/layout/html.bottom.phtml
+++ b/include/views/default/cockpit2/layout/html.bottom.phtml
@@ -1,6 +1,6 @@
 </head>
-
-<body class="no-init" bgcolor="#202228">
+<? //  bgcolor="#202228" ?>
+<body class="no-init">
 <div class="loader-wrap">
 	<div class="loader-frame"><div class="loader">&nbsp;</div></div>
 </div>
