--- a/include/views/mail/crunchbutton/layout/html.phtml
+++ b/include/views/mail/crunchbutton/layout/html.phtml
@@ -52,11 +52,11 @@
 	td.imporant {
 		font-size: 18px;
 	}
-	
+
 	h1, h2 {
 		background-image: url(data:image/gif;base64,R0lGODlhAwADAIABAP///////yH5BAEAAAEALAAAAAADAAMAAAIEBHIJBQA7);
 	}
-	
+
 	.xhatch {
 		background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAFCAYAAACNbyblAAAAI0lEQVQIW2NkwAT/GdHE/gP5jMiCYAGQIpggXAAmiCIAEgQAAE4FBbECyZcAAAAASUVORK5CYII=);
 		color: #000;
@@ -64,29 +64,29 @@
 		text-align: center;
 		font-size: 14px;
 	}
-	
-	
-	
+
+
+
 	.separator-big {
 		height: 20px;
 	}
-	
+
 	.separator-small {
 		height: 14px;
 		margin: 5px 0 5px 0;
 	}
-	
+
 	.icon-big {
 		height: 45px;
 	}
-	
+
 	.text-size-mid {
 		font-size: 15px;
 	}
 	.text-size-small {
 		font-size: 12px;
 	}
-	
+
 	.notes-content {
 		background-color: #373737;
 		color: #fff;
@@ -100,20 +100,20 @@
 		line-height: 1.6em;
 		font-weight: bold;
 	}
-	
+
 	.arrow-left {
-		width: 0; 
-		height: 0; 
+		width: 0;
+		height: 0;
 		border-top: 10px solid transparent;
-		border-bottom: 10px solid transparent; 
+		border-bottom: 10px solid transparent;
 		border-right:10px solid #373737;
 		margin-right: -7px;
 	}
-	
+
 	.fooditem {
 		border-bottom: 1px solid #999;
 	}
-	
+
 	.topitem {
 		border-bottom: 2px solid #999;
 	}
@@ -145,7 +145,7 @@
 	padding-bottom: 2px;
 }
 .stealthfax-top-content{
-	border-right: 1px solid #999;	
+	border-right: 1px solid #999;
 	font-family: Helvetica, Arial;
 	font-size: 16px;
 	padding-top: 0;
@@ -165,6 +165,11 @@
 	font-family: Helvetica, Arial;
 	font-size: 14px;
 	border: 1px solid #999;
+}
+.stealthfax-not-receipt{
+	font-family: Helvetica, Arial;
+	font-size: 12px;
+	text-align: right;
 }
 </style>
 <body style="font-family:Helvetica,Arial">
